# recommendation-system

./: .gitignore  README.md  pyproject.toml
src/: config.py  logger.py  main.py  utils.py
src/model/: dnn.py
