[tool.poetry]
name = "recommendation-project"
version = "0.1.0"
description = ""
authors = ["tony <tonychunenlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
numpy = "^1.23.2"
scikit-learn = "^1.3.2"
kaggle = "^1.5.16"
dill = "^0.3.7"
tensorboard = "^2.15.1"
torch = "2.1.1"
pandas = "1.5.3"
recmetrics = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

